implemented deployment user removal and sudoers.d group template example

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,27 +2,36 @@
 # defaults file for ansible-role-bootstrap
 
 deployment_user                 : 'deploy'
-deployment_user_uid		: '499'
+deployment_user_uid		: '878'
+deployment_user_state           : 'absent'
 
-deployment_user_system_groups   : [ "{{ deployment_user }}" ]
-deployment_user_home_gid        : '499'
+deployment_user_system_groups       : [ "{{ deployment_user }}" ]
+# this probably shoud be skipped for now
+deployment_user_system_groups_state : '{{ deployment_user_state }}'
+
+deployment_user_home_gid       : '{{ deployment_user_uid }}'
 deployment_user_home_group     : '{{ deployment_user_system_groups[0] }}'
-deployment_user_sudo_group     : '{{ deployment_user }}'
 
+deployment_user_sudo_group        : '{{ deployment_user }}'
+deployment_user_sudo_group_state  : '{{ deployment_user_state }}'
+
+# !!! DANGER in most cases home directories should only be removed after archiving!!!
 deployment_user_home            : '{{ "/home/" + deployment_user }}'
 deployment_user_home_mode       : '0750'
+# deployment_user_home_state      : 'absent' # not implemented
 
 deployment_user_shell           : '/bin/bash'
 deployment_user_comment         : 'Ansible deployment user'
 
-deployment_users_public_sshkeys : [ '{{ lookup("pipe","ssh-add -L | grep ^ssh || cat ~/.ssh/id_rsa.pub || true") }}'
- ]
+deployment_users_public_sshkeys       : [ '{{ lookup("pipe","ssh-add -L | grep ^ssh || cat ~/.ssh/id_rsa.pub || true") }}' ]
+deployment_users_public_sshkeys_state : '{{ deployment_user_state }}'
 
 deployment_sudoers_d_files:
 
   etc_sudoers.d:
 
-    src: 'etc/sudoers.d/{{ deployment_user_sudo_group }}'
+    src   : 'etc/sudoers.d/sudoers_group.j2'
+    dest  : '/etc/sudoers.d/{{ deployment_user_sudo_group }}'
     owner : root
     group : root
     mode  : 0400
