updated README.md to reflect ability to remove deployment user as well and geve group_vars example

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for ansible-role-bootstrap
+# defaults file for ansible-role-deployment_user
 
 deployment_user                 : 'deploy'
 deployment_user_uid		: '878'
