set gather_facts to true in example playbook so that ansible_distribution var is set

--- a/files/deployment_user.yml
+++ b/files/deployment_user.yml
@@ -2,7 +2,7 @@
 - hosts: deployment_user
   user: aceadmin
   become: true
-  gather_facts: false
+  gather_facts: true
   roles:
     - deployment_user
 
