--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -61,7 +61,7 @@
     dest  : '{{ item.value.dest }}'
     owner : '{{ item.value.owner }}'
     group : '{{ item.value.group }}'
-    mode  : '{{ item.value.mode }}'
+    mode  : 0440
   with_dict: "{{ deployment_sudoers_d_files }}"
   when: "'{{ deployment_user_state }}' == 'present' and '{{ ansible_distribution }}' == 'Ubuntu'"
 
