--- a/files/deployment_user.yml
+++ b/files/deployment_user.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: deployment_user
-  user: {{ deployment_user_user }}
+  user: {{ deployment_user }}
   become: true
   gather_facts: true
   roles:
