added quotes to mode directive on sudoer.d/admin_group file to prevent permissions error when runnig against CentOS 7

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -39,5 +39,5 @@ deployment_sudoers_d_files:
     dest  : '/etc/sudoers.d/{{ deployment_user_sudo_group }}'
     owner : root
     group : root
-    mode  : 0440
+    mode  : '0440'
 
