renamed var to deployment_user_username and major cleanup

--- a/files/deployment_user.yml
+++ b/files/deployment_user.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: deployment_user
-  user: {{ deployment_user }}
+  user: '{{ deployment_user_username }}'
   become: true
   gather_facts: true
   roles:
