--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,22 +6,22 @@
 #
 # overidden via group_vars/deployment_user/defaults.yml
 
-deployment_user                 : 'deploy'
-deployment_user_uid		: '878'
+deployment_user_username        : 'deploy'
+deployment_user_uid	            : '878'
 deployment_user_state           : 'absent'
 
-deployment_user_system_groups       : [ "{{ deployment_user }}" ]
+deployment_user_system_groups       : [ "{{ deployment_user_username }}" ]
 # this probably shoud be skipped for now
 deployment_user_system_groups_state : '{{ deployment_user_state }}'
 
 deployment_user_home_gid       : '{{ deployment_user_uid }}'
 deployment_user_home_group     : '{{ deployment_user_system_groups[0] }}'
 
-deployment_user_sudo_group        : '{{ deployment_user }}'
+deployment_user_sudo_group        : '{{ deployment_user_username }}'
 deployment_user_sudo_group_state  : '{{ deployment_user_state }}'
 
 # !!! DANGER in most cases home directories should only be removed after archiving!!!
-deployment_user_home            : '{{ "/home/" + deployment_user }}'
+deployment_user_home            : '{{ "/home/" + deployment_user_username }}'
 deployment_user_home_mode       : '0750'
 # deployment_user_home_state      : 'absent' # not implemented
 
