--- a/files/group_vars/deployment_user/defaults.yml
+++ b/files/group_vars/deployment_user/defaults.yml
@@ -11,3 +11,8 @@ deployment_user_username    : 'deployment_user_name_goes_here'
 deployment_user_uid         : '1001' 
 deployment_user_state       : 'present'
 
+# to remove
+
+#deployment_user_username        : 'deploy'
+#deployment_user_uid                 : '878'
+#deployment_user_state           : 'absent'
