--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,8 @@ deployment_user_username        : 'deploy'
 deployment_user_uid	            : '878'
 deployment_user_state           : 'absent'
 
+deployment_user_install_admin_background     : true
+
 deployment_user_system_groups       : [ "{{ deployment_user_username }}" ]
 # this probably shoud be skipped for now
 deployment_user_system_groups_state : '{{ deployment_user_state }}'
