--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -11,3 +11,4 @@
     - deployment_user_username    : 'deployment_user_name_goes_here'
     - deployment_user_uid         : '1001'
     - deployment_user_state       : 'present' # 'absent'
+    - deployment_user_install_admin_background : true
