--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,8 +7,9 @@
 # overidden via group_vars/deployment_user/defaults.yml
 
 deployment_user_username        : 'deploy'
+deployment_user_home            : '/home/{{ deployment_user_username }}'
 deployment_user_uid	            : '878'
-deployment_user_state           : 'absent'
+deployment_user_state           : 'present'
 
 deployment_user_install_admin_background : true
 
