--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -1,14 +1,15 @@
 # roles/freesurfer/tests/vagrant.yml
 ---
 - hosts: all
-  remote_user: vagrant
+  remote_user: ubuntu
   sudo: true
   roles:
     - ../../
 
   vars:
 
-    - deployment_user_username    : 'deployment_user_name_goes_here'
-    - deployment_user_uid         : '1001'
-    - deployment_user_state       : 'present' # 'absent'
+    - deployment_user_username                 : 'deploy'
+    - deployment_user_home                     : '/home/{{ deployment_user_username }}'
+    - deployment_user_uid                      : '1001'
+    - deployment_user_state                    : 'present'
     - deployment_user_install_admin_background : true
