--- a/files/group_vars/deployment_user/defaults.yml
+++ b/files/group_vars/deployment_user/defaults.yml
@@ -10,3 +10,8 @@
 deployment_user_username    : 'deployment_user_name_goes_here'
 deployment_user_uid         : '1001' 
 deployment_user_state       : 'present' # 'absent'
+
+deployment_admin_user_username   : 'admin_user_name_goes_here'
+deployment_admin_user_home       : '/home/{{ deployment_admin_user_username }}'
+deployment_admin_user_background : true
+
