--- a/tests/vagrant.yml
+++ b/tests/vagrant.yml
@@ -1,4 +1,3 @@
-# roles/freesurfer/tests/vagrant.yml
 ---
 - hosts: all
   remote_user: ubuntu
@@ -12,4 +11,8 @@
     - deployment_user_home                     : '/home/{{ deployment_user_username }}'
     - deployment_user_uid                      : '1001'
     - deployment_user_state                    : 'present'
-    - deployment_user_install_admin_background : true
+
+    - deployment_admin_user_username   : 'admin_user_name_goes_here'
+    - deployment_admin_user_home       : '/home/{{ deployment_admin_user_username }}'
+    - deployment_admin_user_background : true
+
