--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,49 +1,49 @@
 ---
-# defaults file for ansible-role-deployment_user
+# defaults file for ansible-role-deployment-user
 
 
 # three vars most people will change.
 #
-# overidden via group_vars/deployment_user/defaults.yml
+# overidden via group_vars/deployment-user/defaults.yml
 
-deployment_user_username        : 'deploy'
-deployment_user_home            : '/home/{{ deployment_user_username }}'
-deployment_user_uid	            : '878'
-deployment_user_state           : 'present'
+deployment-user_username        : 'deploy'
+deployment-user_home            : '/home/{{ deployment-user_username }}'
+deployment-user_uid	            : '878'
+deployment-user_state           : 'present'
 
 deployment_admin_user_username   : 'admin'
 deployment_admin_user_home       : '/home/{{ deployment_admin_user_username }}'
 deployment_admin_user_background : true
 
-deployment_user_system_groups       : [ "{{ deployment_user_username }}" ]
+deployment-user_system_groups       : [ "{{ deployment-user_username }}" ]
 # this probably shoud be skipped for now
-deployment_user_system_groups_state : '{{ deployment_user_state }}'
+deployment-user_system_groups_state : '{{ deployment-user_state }}'
 
-deployment_user_home_gid       : '{{ deployment_user_uid }}'
-deployment_user_home_group     : '{{ deployment_user_system_groups[0] }}'
+deployment-user_home_gid       : '{{ deployment-user_uid }}'
+deployment-user_home_group     : '{{ deployment-user_system_groups[0] }}'
 
-deployment_user_sudo_group        : '{{ deployment_user_username }}'
-deployment_user_sudo_group_state  : '{{ deployment_user_state }}'
+deployment-user_sudo_group        : '{{ deployment-user_username }}'
+deployment-user_sudo_group_state  : '{{ deployment-user_state }}'
 
 # !!! DANGER in most cases home directories should only be removed after archiving!!!
-deployment_user_home            : '{{ "/home/" + deployment_user_username }}'
-deployment_user_home_mode       : '0750'
-# deployment_user_home_state      : 'absent' # not implemented
+deployment-user_home            : '{{ "/home/" + deployment-user_username }}'
+deployment-user_home_mode       : '0750'
+# deployment-user_home_state      : 'absent' # not implemented
 
-deployment_user_shell           : '/bin/bash'
-deployment_user_comment         : 'Ansible deployment user'
+deployment-user_shell           : '/bin/bash'
+deployment-user_comment         : 'Ansible deployment user'
 
-deployment_users_public_sshkeys       : [ '{{ lookup("pipe","ssh-add -L | grep ^ssh || cat ~/.ssh/id_rsa.pub || true") }}' ]
-deployment_users_public_sshkeys_state : '{{ deployment_user_state }}'
+deployment-users_public_sshkeys       : [ '{{ lookup("pipe","ssh-add -L | grep ^ssh || cat ~/.ssh/id_rsa.pub || true") }}' ]
+deployment-users_public_sshkeys_state : '{{ deployment-user_state }}'
 
 deployment_sudoers_d_files:
 
   etc_sudoers.d:
 
     src   : 'etc/sudoers.d/sudoers_group.j2'
-    dest  : '/etc/sudoers.d/{{ deployment_user_sudo_group }}'
+    dest  : '/etc/sudoers.d/{{ deployment-user_sudo_group }}'
     owner : root
     group : root
-    state : '{{ deployment_user_state }}'
+    state : '{{ deployment-user_state }}'
     mode  : '0440'
 
