--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -167,7 +167,7 @@
     path: '/usr/share/backgrounds/gnome'
     state: directory
     mode: 0755
-  when: "'{{ deployment_admin_user_background }}' == 'true'"
+#  when: "'{{ deployment_admin_user_background }}' == 'true'"
 
 - name: "Copy admin desktop background image"
   copy:
