--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 ---
+## roles/deployment_user/meta/main.yml
 
 galaxy_info:
   author: Christopher Steel
@@ -194,17 +195,3 @@ dependencies: []
   # List your role dependencies here, one per line.
   # Be sure to remove the '[]' above if you add dependencies
   # to this list.
-
-ansigenome_info:
-  galaxy_id: ''
-
-  travis: True
-
-  synopsis: |
-    Describe your role in a few paragraphs....
-
-  usage: |
-    Describe how to use in more detail...
-
-  #custom: |
-  #  Any custom output you want after the usage section..
